--- a/Library.UI/Views/Shared/_Layout.cshtml
+++ b/Library.UI/Views/Shared/_Layout.cshtml
@@ -10,7 +10,9 @@
 
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Library.UI.styles.css" asp-append-version="true" />
+
     <style>
+       
         body {
             min-height: 100vh;
             min-height: -webkit-fill-available;
@@ -115,8 +117,9 @@
 <body>
 
 
-    <div class="container">
-        @RenderBody()
+    <div class="container" />
+    <div class="pt-5"></div>
+            @RenderBody()
     </div>
 
 
